# krokenheimer

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LLM_SETUP.md  MIGRATION.md  QUICKSTART_TRAINING.md  README.md  TRAINING.md  check-chroma.sh  chromadb-runner.sh  debug-env.sh  docker-compose.yml  docker-entrypoint.sh  docker-restart.sh  docker-run.sh  docker-stop.sh  docker-supervisord.conf  fix-env.sh  package-lock.json  package.json  remote_config.json  start-all.sh  start-llm-services.sh  startup.sh  stop-llm-services.sh  tsconfig.json  wait-for-chromadb.sh
.claude/: settings.local.json
docs/: remote-training-setup.md
remote-client/: README.md  START_HERE.bat  discord-bot.env.example  remote_config.json  remote_trainer.py  requirements.txt  run_scheduler.bat  run_service.bat  run_trainer.bat  scheduler.py  setup_windows.bat  test_setup.bat  train_windows.py  windows_service.py
remote-client/models/krokenheimer_v1766939964/: tokenizer.json
remote-client/models/krokenheimer_v1766940710/: tokenizer.json
rust-ml/: Cargo.toml  build.rs  index.node  package.json
rust-ml/src/: bpe_test.rs  bpe_tokenizer.rs  bpe_wrapper.rs  inference.rs  lib.rs  model.rs  simple_burn.rs  tokenizer.rs  tokenizer_fixer.rs  training.rs  utils.rs
scripts/: generate.py  reset_training.sh  setup_training.sh  train_from_scratch.py  train_text_lora.py  train_unsloth.py
src/: index.ts
src/config/: remoteTrainingConfig.ts  trainingConfig.ts
src/core/: Bot.ts
src/core/util/: logger.ts
src/plugins/: ASCIIArtPlugin.ts  BioinformaticsPlugin.ts  CalculatorPlugin.ts  CorePlugin.ts  DownCheckerPlugin.ts  GifPlugin.ts  LLMPlugin.ts
src/services/: BlastApiClient.ts  FineTuningService.ts  MessageStorageService.ts  ModelInferenceService.ts  OllamaService.ts  RemoteTrainingApiService.ts  RustMLService.ts  SequenceCache.ts  SequenceDetector.ts  SimpleEmbeddingService.ts  SpeciesImageService.ts  VectorStoreService.ts
src/types/: bioinformatics.ts  index.ts  llm.ts
src/utils/: SequenceFormatter.ts
