[package]
name = "krokenheimer-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "krokenheimer_ml"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Candle ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
candle-datasets = "0.8"

# Tokenization
tokenizers = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# Utilities
anyhow = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# File I/O
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
neon-build = "0.1"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]