[package]
name = "krokenheimer-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "krokenheimer_ml"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Candle ML framework
candle-core = "0.9.1"
candle-nn = "0.9.1"

# Tokenization
tokenizers = { version = "0.22.2", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# Utilities
anyhow = "1.0"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ahash = "0.8.12"
num_cpus = "1.16"
fastrand = "2.3.0"

[build-dependencies]
neon-build = "0.10.1"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal"]