[package]
name = "krokenheimer-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "krokenheimer_ml"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Burn ML framework (CPU-only with NdArray backend)
burn = { version = "0.14", features = ["train", "ndarray"], default-features = false }

# Tokenization (compatible version)
tokenizers = { version = "0.19", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
fastrand = "2.0"

[build-dependencies]
neon-build = "0.10.1"

[features]
default = []